--- a/ARQ/Base.lproj/Main.storyboard
+++ b/ARQ/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -586,35 +586,26 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZoE-xg-tNf">
-                                                            <rect key="frame" x="143" y="15" width="169" height="31"/>
+                                                            <rect key="frame" x="85" y="31" width="200" height="36"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <attributedString key="attributedText">
                                                                 <fragment content="Methotrexate">
                                                                     <attributes>
                                                                         <color key="NSColor" red="0.79607843137254897" green="0.29411764705882354" blue="0.29803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                                        <font key="NSFont" size="27" name="Arial-BoldMT"/>
+                                                                        <font key="NSFont" size="32" name="Arial-BoldMT"/>
                                                                         <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                                     </attributes>
                                                                 </fragment>
                                                             </attributedString>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XgL-xh-feA">
-                                                            <rect key="frame" x="154" y="53" width="97" height="30"/>
+                                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sdf-wV-5H2">
+                                                            <rect key="frame" x="299" y="25" width="31" height="49"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                            <nil key="textColor"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                                            <textInputTraits key="textInputTraits"/>
-                                                        </textField>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Pills" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XMu-c7-6vN">
-                                                            <rect key="frame" x="257" y="53" width="44" height="30"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                                            <color key="textColor" red="0.79607843137254897" green="0.29411764705882354" blue="0.29803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
+                                                            <state key="normal" image="log-front_button"/>
+                                                        </button>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="methotrexate-icon" translatesAutoresizingMaskIntoConstraints="NO" id="GFm-wn-Be1">
-                                                            <rect key="frame" x="30" y="15" width="81" height="70"/>
+                                                            <rect key="frame" x="8" y="19" width="69" height="60"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                                         </imageView>
                                                     </subviews>
@@ -624,10 +615,9 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="cellView" destination="IBl-HW-BWN" id="8jD-Jk-EMZ"/>
-                                            <outlet property="medField" destination="XgL-xh-feA" id="FrK-8L-IDZ"/>
+                                            <outlet property="medButton" destination="Sdf-wV-5H2" id="geZ-9V-Gzl"/>
                                             <outlet property="medImage" destination="GFm-wn-Be1" id="mbM-Qs-sRU"/>
                                             <outlet property="medLabel" destination="ZoE-xg-tNf" id="5OQ-9P-9Ws"/>
-                                            <outlet property="pillLabel" destination="XMu-c7-6vN" id="CyF-cv-98x"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -800,6 +790,7 @@
         <image name="log-LH-background" width="1258" height="2216"/>
         <image name="log-RH-background" width="1242" height="2208"/>
         <image name="log-back_button" width="64" height="99"/>
+        <image name="log-front_button" width="63" height="99"/>
         <image name="log-general-background" width="1248" height="2216"/>
         <image name="log-general2-background" width="1248" height="2217"/>
         <image name="log-medication-background" width="1247" height="2216"/>
